# apps/backend/docs/swagger.json
@@ -1200,6 +1200,40 @@
                 }
             }
         },
+        "v1.ImageUploadFileDTO": {
+            "type": "object",
+            "properties": {
+                "content_disposition": {
+                    "type": "string"
+                },
+                "custom_id": {
+                    "type": "string"
+                },
+                "fields": {},
+                "file_name": {
+                    "type": "string"
+                },
+                "file_type": {
+                    "type": "string"
+                },
+                "file_url": {
+                    "type": "string"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "polling_jwt": {
+                    "type": "string"
+                },
+                "polling_url": {
+                    "type": "string"
+                },
+                "url": {
+                    "description": "signed URL to upload",
+                    "type": "string"
+                }
+            }
+        },
         "v1.ImageUploadRequestDTO": {
             "type": "object",
             "properties": {
@@ -1221,8 +1255,8 @@
         "v1.ImageUploadResponseDTO": {
             "type": "object",
             "properties": {
-                "url": {
-                    "type": "string"
+                "file": {
+                    "$ref": "#/definitions/v1.ImageUploadFileDTO"
                 }
             }
         },
